# pyco

./: README.md  pyproject.toml
pyco/parser/: __init__.py  errors.py  lexer.py
